some visualizations are added

--- a/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.html
+++ b/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.html
@@ -1453,9 +1453,6 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </div>
 
 <div class="d-article">
-<div class="layout-chunk" data-layout="l-body">
-
-</div>
 <div class="l-page">
 <div class="layout-chunk" data-layout="l-body">
 
@@ -1474,6 +1471,9 @@ d-appendix {
   text-align: center;
 }
 </style>
+</div>
+<div class="layout-chunk" data-layout="l-body">
+
 </div>
 <div class="layout-chunk" data-layout="l-body">
 <style type="text/css">
@@ -1643,7 +1643,13 @@ Icons
 <section id="visualization" class="panel">
 <h4>🔴 Visualization</h4>
 <div class="layout-chunk" data-layout="l-body">
-<p><img src="analyzing-covid19-in-usa_files/figure-html5/unnamed-chunk-7-1.png" width="624" /></p>
+<p><img src="analyzing-covid19-in-usa_files/figure-html5/unnamed-chunk-7-1.png" width="50%" /></p>
+</div>
+</section>
+<section id="visualization-1" class="panel">
+<h4>🔴 Visualization</h4>
+<div class="layout-chunk" data-layout="l-body">
+<p><img src="analyzing-covid19-in-usa_files/figure-html5/unnamed-chunk-8-1.png" width="50%" data-distill-preview=1 /></p>
 </div>
 </section>
 </div>
