--- a/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.html
+++ b/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.html
@@ -99,12 +99,20 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <meta property="og:title" content="Analyzing COVID19 in USA"/>
   <meta property="og:type" content="article"/>
   <meta property="og:description" content="Analyzing Covid 19 reports"/>
+  <meta property="og:image" content="https://www.datamotto.com/analyzing-covid19-in-usa_files/figure-html5/unnamed-chunk-8-1.png"/>
+  <meta property="og:image:width" content="3900"/>
+  <meta property="og:image:height" content="2400"/>
   <meta property="og:locale" content="en_US"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
-  <meta property="twitter:card" content="summary"/>
+  <meta property="twitter:card" content="summary_large_image"/>
   <meta property="twitter:title" content="Analyzing COVID19 in USA"/>
   <meta property="twitter:description" content="Analyzing Covid 19 reports"/>
+  <meta property="twitter:image" content="https://www.datamotto.com/analyzing-covid19-in-usa_files/figure-html5/unnamed-chunk-8-1.png"/>
+  <meta property="twitter:image:width" content="3900"/>
+  <meta property="twitter:image:height" content="2400"/>
+  <meta property="twitter:site" content="@DataMotto"/>
+  <meta property="twitter:creator" content="@DataMotto"/>
 
   <!--/radix_placeholder_meta_tags-->
   
@@ -112,7 +120,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","packages","categories","tech","bibliography","draft"]}},"value":[{"type":"character","attributes":{},"value":["Analyzing COVID19 in USA"]},{"type":"character","attributes":{},"value":["Analyzing Covid 19 reports\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","url"]}},"value":[{"type":"character","attributes":{},"value":["Ardalan Mirshani"]},{"type":"character","attributes":{},"value":["Novartis"]},{"type":"character","attributes":{},"value":["https://mirshani.com"]}]}]},{"type":"character","attributes":{},"value":["2021-01-03"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["ggplot2","forcats"]},{"type":"character","attributes":{},"value":["Visualization","Modeling"]},{"type":"character","attributes":{},"value":["R","SqL","Python"]},{"type":"character","attributes":{},"value":["bibliography.bib"]},{"type":"logical","attributes":{},"value":[false]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","base_url","output","packages","categories","tech","bibliography","draft","twitter"]}},"value":[{"type":"character","attributes":{},"value":["Analyzing COVID19 in USA"]},{"type":"character","attributes":{},"value":["Analyzing Covid 19 reports\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","url"]}},"value":[{"type":"character","attributes":{},"value":["Ardalan Mirshani"]},{"type":"character","attributes":{},"value":["Novartis"]},{"type":"character","attributes":{},"value":["https://mirshani.com"]}]}]},{"type":"character","attributes":{},"value":["2021-01-03"]},{"type":"character","attributes":{},"value":["https://www.datamotto.com"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["ggplot2","forcats"]},{"type":"character","attributes":{},"value":["Visualization","Modeling"]},{"type":"character","attributes":{},"value":["R","SqL","Python"]},{"type":"character","attributes":{},"value":["bibliography.bib"]},{"type":"logical","attributes":{},"value":[false]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@DataMotto"]},{"type":"character","attributes":{},"value":["@DataMotto"]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
